User can now set LLDP polling time by REST API #29
